<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kim\'s SST</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timerVal">"0  00"</string>
    <string name="timerValMils">00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="resetButtonLabel">Restart</string>
    <string name="beeps">Beep every:</string>
    <string-array name="times">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
</resources>